<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#F2F2F2"
    tools:context=".HealthTipsActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="56dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:onClick="launchHomepage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="47dp"
        app:layout_anchorGravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/topTipsTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_tips" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/exerciseTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/dietTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diet" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/apptFreqTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appt_freq" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view_pager2"
        android:layout_below="@+id/tab_layout"/>

</RelativeLayout>